fix shift of overlay in stratomex

--- a/style.scss
+++ b/style.scss
@@ -223,6 +223,8 @@ $hover-color: #ffdd05;
 
 .text-overlay {
   position: absolute;
+  left: 0;
+  top: 0;
   background-color: white;
   opacity: 0.98;
 
